Refactor assertions in test_spatial_ensemble_metrics for improved readability
- Updated assertion formatting in test_spatial_ensemble_metrics.py to enhance clarity and maintain consistency.
- Removed unnecessary line breaks in assertions to streamline the code.
- Ensured all assertions maintain the same structure for better readability.

Fix import statement in test_statistical_functions

- Added missing import for `pearsonr` from `scipy.stats` in test_statistical_functions.py.

Clean up unused import in test_utils_stats

- Removed unused import statement in test_utils_stats.py to improve code cleanliness.

--- a/notebooks/04_ensemble_analysis_multi_model.ipynb
+++ b/notebooks/04_ensemble_analysis_multi_model.ipynb
@@ -448,6 +448,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import auc, roc_curve\n",
+    "\n",
     "# Create ensemble evaluation dashboard\n",
     "fig, axes = plt.subplots(3, 3, figsize=(18, 15))\n",
     "\n",
@@ -459,86 +461,110 @@
     "axes[0, 0].set_title('RMSE by Ensemble Member')\n",
     "axes[0, 0].grid(True, alpha=0.3)\n",
     "\n",
-    "# Multi-model comparison\n",
-    "mm_rmses = [ms.RMSE(obs_temps, multi_model_forecasts[:, i]) for i in range(n_models)]\n",
-    "all_rmses = rmse_values + mm_rmses\n",
-    "labels = [f'E{i+1}' for i in range(n_members)] + [f'MM{i+1}' for i in range(n_models)]\n",
-    "colors = ['blue'] * n_members + ['red'] * n_models\n",
-    "\n",
-    "axes[0, 1].bar(range(len(all_rmses)), all_rmses, color=colors)\n",
-    "axes[0, 1].set_xlabel('Model/Member')\n",
-    "axes[0, 1].set_ylabel('RMSE')\n",
-    "axes[0, 1].set_title('RMSE Comparison (Ensemble vs Multi-Model)')\n",
-    "axes[0, 1].set_xticks(range(len(labels)))\n",
-    "axes[0, 1].set_xticklabels(labels, rotation=45)\n",
+    "# Bias by ensemble member\n",
+    "bias_values = [ms.MBE(obs_temps, ensemble_forecasts[:, i]) for i in range(n_members)]\n",
+    "axes[0, 1].bar(range(1, n_members + 1), bias_values, color='orange')\n",
+    "axes[0, 1].set_xlabel('Ensemble Member')\n",
+    "axes[0, 1].set_ylabel('Bias')\n",
+    "axes[0, 1].set_title('Bias by Ensemble Member')\n",
     "axes[0, 1].grid(True, alpha=0.3)\n",
     "\n",
-    "# Ensemble spread histogram\n",
-    "axes[0, 2].hist(ensemble_std, bins=30, edgecolor='black', alpha=0.7)\n",
-    "axes[0, 2].set_xlabel('Ensemble Spread')\n",
-    "axes[0, 2].set_ylabel('Frequency')\n",
-    "axes[0, 2].set_title(f'Ensemble Spread Distribution (Mean: {np.mean(ensemble_std):.3f})')\n",
+    "# Ensemble mean vs observation scatter plot\n",
+    "axes[0, 2].scatter(obs_temps, ens_mean, alpha=0.6, s=20)\n",
+    "axes[0, 2].plot([obs_temps.min(), obs_temps.max()], [obs_temps.min(), obs_temps.max()], 'r--')\n",
+    "axes[0, 2].set_xlabel('Observed')\n",
+    "axes[0, 2].set_ylabel('Ensemble Mean')\n",
+    "axes[0, 2].set_title('Ensemble Mean vs Observed')\n",
     "axes[0, 2].grid(True, alpha=0.3)\n",
     "\n",
-    "# Probability vs observed for threshold\n",
-    "thresh = 15\n",
-    "obs_binary = (obs_temps > thresh).astype(int)\n",
-    "prob_forecast = np.mean(ensemble_forecasts > thresh, axis=1)\n",
-    "\n",
-    "axes[1, 0].scatter(prob_forecast, obs_binary, alpha=0.5, s=20)\n",
-    "axes[1, 0].set_xlabel('Forecast Probability (T > 15°C)')\n",
-    "axes[1, 0].set_ylabel('Observed (1) or Not (0)')\n",
-    "axes[1, 0].set_title('Probability vs Observed (T > 15°C)')\n",
+    "# Ensemble spread\n",
+    "axes[1, 0].plot(range(1, len(ens_spread) + 1), ens_spread, 'g-', marker='o')\n",
+    "axes[1, 0].set_xlabel('Time Step')\n",
+    "axes[1, 0].set_ylabel('Ensemble Spread')\n",
+    "axes[1, 0].set_title('Ensemble Spread Over Time')\n",
     "axes[1, 0].grid(True, alpha=0.3)\n",
     "\n",
-    "# Ensemble forecast uncertainty vs performance\n",
-    "axes[1, 1].scatter(ensemble_std, abs_errors, alpha=0.5, s=20)\n",
-    "axes[1, 1].set_xlabel('Ensemble Uncertainty (Std)')\n",
-    "axes[1, 1].set_ylabel('Absolute Error')\n",
-    "axes[1, 1].set_title(f'Uncertainty vs Performance (Corr: {spread_skill_corr:.3f})')\n",
+    "# Rank histogram\n",
+    "axes[1, 1].hist(ranks, bins=np.arange(0, n_members + 2) - 0.5, alpha=0.7, color='purple')\n",
+    "axes[1, 1].set_xlabel('Rank')\n",
+    "axes[1, 1].set_ylabel('Frequency')\n",
+    "axes[1, 1].set_title('Rank Histogram')\n",
     "axes[1, 1].grid(True, alpha=0.3)\n",
     "\n",
+    "# CRPS over time\n",
+    "time_crps = []\n",
+    "for i in range(len(obs_temps)):\n",
+    "    crps_val = ms.CRPS(obs_temps[i:i+1], ensemble_forecasts[i:i+1, :])\n",
+    "    time_crps.append(crps_val)\n",
+    "\n",
+    "axes[1, 2].plot(range(1, len(time_crps) + 1), time_crps, 'b-', alpha=0.7)\n",
+    "axes[1, 2].set_xlabel('Time Step')\n",
+    "axes[1, 2].set_ylabel('CRPS')\n",
+    "axes[1, 2].set_title('CRPS Over Time')\n",
+    "axes[1, 2].grid(True, alpha=0.3)\n",
+    "\n",
     "# ROC curve for one threshold\n",
-    "from sklearn.metrics import auc, roc_curve\n",
+    "threshold = np.percentile(obs_temps, 90)  # 90th percentile threshold\n",
+    "obs_binary = (obs_temps >= threshold).astype(int)\n",
+    "\n",
+    "# Create probabilistic forecast from ensemble\n",
+    "prob_forecast = np.mean(ensemble_forecasts >= threshold, axis=1)\n",
     "\n",
     "fpr, tpr, _ = roc_curve(obs_binary, prob_forecast)\n",
     "roc_auc = auc(fpr, tpr)\n",
     "\n",
-    "axes[1, 2].plot(fpr, tpr, linewidth=2, label=f'ROC Curve (AUC = {roc_auc:.3f})')\n",
-    "axes[1, 2].plot([0, 1], [0, 1], 'k--', linewidth=1, label='Random')\n",
-    "axes[1, 2].set_xlabel('False Positive Rate')\n",
-    "axes[1, 2].set_ylabel('True Positive Rate')\n",
-    "axes[1, 2].set_title('ROC Curve (T > 15°C)')\n",
-    "axes[1, 2].legend()\n",
-    "axes[1, 2].grid(True, alpha=0.3)\n",
-    "\n",
-    "# Ensemble forecast distribution for a single time point\n",
-    "time_idx = 50\n",
-    "axes[2, 0].hist(ensemble_forecasts[time_idx, :], bins=10, edgecolor='black', alpha=0.7)\n",
-    "axes[2, 0].axvline(obs_temps[time_idx], color='red', linewidth=2, label=f'Observed: {obs_temps[time_idx]:.2f}')\n",
-    "axes[2, 0].axvline(ensemble_mean[time_idx], color='blue', linewidth=2, label=f'Ensemble Mean: {ensemble_mean[time_idx]:.2f}')\n",
-    "axes[2, 0].set_xlabel('Temperature (°C)')\n",
-    "axes[2, 0].set_ylabel('Count')\n",
-    "axes[2, 0].set_title(f'Ensemble Distribution at Time {time_idx}')\n",
+    "axes[2, 0].plot(fpr, tpr, 'b-', linewidth=2, label=f'ROC curve (AUC = {roc_auc:.3f})')\n",
+    "axes[2, 0].plot([0, 1], [0, 1], 'k--', linewidth=1)\n",
+    "axes[2, 0].set_xlabel('False Positive Rate')\n",
+    "axes[2, 0].set_ylabel('True Positive Rate')\n",
+    "axes[2, 0].set_title(f'ROC Curve for {threshold:.1f} threshold')\n",
     "axes[2, 0].legend()\n",
     "axes[2, 0].grid(True, alpha=0.3)\n",
     "\n",
-    "# Ranked probability score components\n",
-    "axes[2, 1].plot(range(1, n_members + 1), rmse_values, 'o-', linewidth=2, markersize=8)\n",
-    "axes[2, 1].set_xlabel('Ensemble Member (Ranked)')\n",
-    "axes[2, 1].set_ylabel('RMSE')\n",
-    "axes[2, 1].set_title('Ensemble Member Performance')\n",
+    "# Reliability diagram\n",
+    "n_bins = 10\n",
+    "prob_bins = np.linspace(0, 1, n_bins + 1)\n",
+    "bin_centers = (prob_bins[:-1] + prob_bins[1:]) / 2\n",
+    "observed_freq = []\n",
+    "forecast_prob = []\n",
+    "\n",
+    "for i in range(n_bins):\n",
+    "    bin_mask = (prob_forecast >= prob_bins[i]) & (prob_forecast < prob_bins[i + 1])\n",
+    "    if np.sum(bin_mask) > 0:\n",
+    "        observed_freq.append(np.mean(obs_binary[bin_mask]))\n",
+    "        forecast_prob.append(np.mean(prob_forecast[bin_mask]))\n",
+    "\n",
+    "axes[2, 1].scatter(forecast_prob, observed_freq, s=60, alpha=0.8, color='red')\n",
+    "axes[2, 1].plot([0, 1], [0, 1], 'k--', linewidth=1)\n",
+    "axes[2, 1].set_xlabel('Forecast Probability')\n",
+    "axes[2, 1].set_ylabel('Observed Frequency')\n",
+    "axes[2, 1].set_title('Reliability Diagram')\n",
     "axes[2, 1].grid(True, alpha=0.3)\n",
     "\n",
-    "# Multi-model performance\n",
-    "axes[2, 2].bar(range(1, n_models + 1), mm_rmses, alpha=0.7)\n",
-    "axes[2, 2].set_xlabel('Multi-Model')\n",
-    "axes[2, 2].set_ylabel('RMSE')\n",
-    "axes[2, 2].set_title('Multi-Model Performance')\n",
+    "# Ensemble member correlation with observation\n",
+    "member_corrs = [ms.pearson_correlation(obs_temps, ensemble_forecasts[:, i])\n",
+    "                for i in range(n_members)]\n",
+    "axes[2, 2].bar(range(1, n_members + 1), member_corrs, color='cyan')\n",
+    "axes[2, 2].set_xlabel('Ensemble Member')\n",
+    "axes[2, 2].set_ylabel('Correlation with Obs')\n",
+    "axes[2, 2].set_title('Member-Observation Correlation')\n",
     "axes[2, 2].grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Print comprehensive ensemble statistics\n",
+    "print(\"\\\\n=== Ensemble Verification Summary ===\")\n",
+    "print(f\"Ensemble Mean RMSE: {ms.RMSE(obs_temps, ens_mean):.3f}\")\n",
+    "print(f\"Ensemble Mean Bias: {ms.MBE(obs_temps, ens_mean):.3f}\")\n",
+    "print(f\"Ensemble Mean Correlation: {ms.pearson_correlation(obs_temps, ens_mean):.3f}\")\n",
+    "print(f\"\\\\nEnsemble Statistics:\")\n",
+    "print(f\"  Mean Spread: {np.mean(ens_spread):.3f}\")\n",
+    "print(f\"  CRPS: {crps_value:.3f}\")\n",
+    "print(f\"  Reliability: {reliability:.3f}\")\n",
+    "print(f\"  Resolution: {resolution:.3f}\")\n",
+    "print(f\"  Uncertainty: {uncertainty:.3f}\")\n",
+    "print(f\"  ROC AUC (90th percentile): {roc_auc:.3f}\")"
    ]
   },
   {
